style.css
* {
    margin: 0;
    padding: 0;

    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

h1 {
    font-size: 2rem;
    
}
#title-section {
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);

    position: fixed;
    z-index: 2000;
    top: 0;
    display: flex;
    align-items: center;
    
    background-color: white;

    width: 100%;

    border-radius: 0rem 0rem 1rem 1rem;

    height: 6rem;

    padding-left: 2rem;
    padding-right: 1.25rem;

    box-sizing: border-box;
}


#title-section > span {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

#settings-dialog input.textbox {
 width: 50%;
}

.entry {
    width: 100%;
    box-sizing: border-box;
    padding: 0 1.25rem 0 2rem;
    display: flex;
    justify-content: space-between;
    height: 3rem;
}

.total {
    padding-right: 3rem;
    font-weight: bold;
    font-style: italic;
}

.user-added-section {
    border-bottom: 2px solid black;
}

h3 {
    font-size: 1rem;
}

span {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.dialog-entry, .dialog-buttons {
    padding: 0.5rem 1rem 0.5rem 1rem;
}

.section-heading {
    box-sizing: border-box;
    width: 100%;
    padding: 1rem 1.25rem 1rem 2rem;
}

.symbolic {
    border: none;
    background: none;
    font-size: 2rem;
    color: inherit;
    width: 3rem;
    height: 3rem;

    box-sizing: border-box;

    text-align: center;
    vertical-align: center;

}

button.labeled {
    color: black;
    box-sizing: unset;
    background-color: lightgrey;

    border: 2px solid black;

    width: calc(8rem - 4px);
    height: 2rem;
    margin: 0.0rem 0;
    padding: calc(0.5rem - 2px) 0 calc(0.5rem - 2px) 0;
    font-weight: bold;
    font-size: 1rem;
    border-radius: 0.25rem;
}

input.textbox {
    color: black;
    /* background: rgb(204,204,204); */
    /* background: linear-gradient(180deg, rgba(230,230,230,1) 0%, rgba(255,255,255,1) 100%); */
    background: none;
    border: 2px solid black;
    border-radius: 0.25rem;

    height: 1.5rem;
    padding: calc(0.375rem - 2px) calc(0.5rem - 2px);
    font-size: 1rem;
}

dialog {
    position: fixed;
    width: 80%;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    padding: 0.5rem 0 0.5rem 0;

    border-radius: 1rem;
    border: 2px solid black;
}

.dialog-buttons {
    padding-right: 1rem;
    padding-left: 1rem;
}

#add-section-button {
    margin-left: 2rem;
    margin-top: 2rem;
    margin-bottom: 2rem;
}


dialog > div {
    width: calc(100% - 2rem);
    display: flex;
    justify-content: space-between;
    padding-right: 1rem;
    padding-left: 1rem;
}

.toolbox > input.textbox {
    width: 4.5rem;
}

.toolbox {
    display: flex;
    justify-content: right;
    align-items: center;
    /* width: 40%; */
    position: relative;
}

dialog > span > input.textbox {
    width: calc(75% - 1rem);
}

#current-balance {
    font-size: 1.5rem;
}

#current-balance-section {
    width: 100%;
    position: fixed;
    z-index: 2000;
    bottom: 0;
    display: flex;

    box-sizing: border-box;

    height: 6rem;
    align-items: center;

    padding-left: 2rem;
    padding-right: 2rem;

    background-color: white;

    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);

    border-radius: 1rem 1rem 0rem 0rem;
}

#current-balance-section > span {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

body {
    padding-top: 6rem;
    padding-bottom: 6rem;
}

input.radio-option {
    margin: 0;
    margin-left: 1rem;

    appearance: none;
    background-color: white;
    font: inherit;
    color: black;
    width: 1.5rem;
    height: 1.5rem;
    border: 2px solid black;
    border-radius: 25%;
    transform: translateY(-1px);

    display: grid;
    place-content: center;
}

input.radio-option::before {
    content: "";
    width: 1rem;
    height: 1rem;
    border-radius: 25%;
    transform: scale(0);
    box-shadow: inset 2rem 2rem black;
}

input.radio-option:checked::before {
    transform: scale(1);
}

span.radio > label {
    padding-left: 0.5rem;
}

.dialog-entry {
    height: 2rem;
}

#confirmation-dialog > span {
    height: unset;

}

.menu {
    position: absolute;
    z-index: 1000;
    top: -1.8rem;
    right: 3rem;
    border-radius: 0.25rem;
    width: 10rem;
    min-width: 6.5rem;
    color: black;

    background-color: white;

    padding: 0.25rem;
    padding-bottom: 0;

    border: 2px solid black;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);

}

.section-heading {
    position: relative;
}

.section-menu {
    right: 4.25rem;
    top: 0.75rem;
}

.menu > p {
    padding: calc(0.5rem - 2px) 0 calc(0.5rem - 2px) 0;
    margin-bottom: 0.25rem;
    border-radius: 0.25rem;
    
    color: black;
    box-sizing: unset;
    background-color: lightgrey;

    border: 2px solid black;
    cursor: pointer;

    height: 2rem;

    display: flex;
    align-items: center;
    justify-content: center;

    font-weight: bold;

}

#title-section .symbolic {
    font-size: 3rem;
    height: 4rem;
}

